--- a/introduction.html
+++ b/introduction.html
@@ -51,7 +51,7 @@
         <nav>
           <li><a href="https://github.com/giancarlo-k" target="_blank">GitHub</a></li>
           <li><a href="https://giancarlo-k.github.io" target="_blank">GitHub.io</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/introduction.html" target="_blank">WEB115.io</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/index.html" target="_blank">WEB115.io</a></li>
           <li><a href="https://www.freecodecamp.org/giancarlo_k" target="_blank">freeCodeCamp</a></li>
           <li><a href="https://www.codecademy.com/profiles/giancarlo_k" target="_blank">Codecademy</a></li>
           <li><a href="https://jsfiddle.net/user/giancarlo_k/fiddles/" target="_blank">JSFiddle</a></li>
