--- a/brand.html
+++ b/brand.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
   <body>
     <h1>
       <div class="logoText">Main Logo</div>
-      <img class="logo" src="images/soriahLogo.png">
+      <img class="logo" alt="logo" src="images/soriahLogo.png">
     </h1>
 
     <div class="goalBox">
@@ -73,12 +73,12 @@
       
       <div class="footerButtons">
         <a href="http://validator.w3.org/check?uri=referer" target="_blank" >
-          <img src="images/html_validation_button_old.gif"/>
+          <img src="images/html_validation_button_old.gif" alt="html validation"/>
           <p>- HTML Validation -</p>
         </a>
 
         <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
-          <img class="cssImg" src="images/validation_button_css_rectangle_blue.gif"/>
+          <img class="cssImg" src="images/validation_button_css_rectangle_blue.gif" alt="css validation"/>
           <p>- CSS Validation -</p>
          </a>
       </div>
