--- a/brand.html
+++ b/brand.html
@@ -15,7 +15,7 @@
 
   <body>
     <h1>
-      <div class="logoText">Main Logo</div>
+      <p class="logoText">Main Logo</p>
       <img class="logo" alt="logo" src="images/soriahLogo.png">
     </h1>
 
