--- a/brand.html
+++ b/brand.html
@@ -72,13 +72,13 @@
       </div>
       
       <div class="footerButtons">
-        <a href="http://validator.w3.org/check?uri=referer" target="_blank" >
-          <img src="images/html_validation_button_old.gif" alt="html validation"/>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb115%2Fbrand.html" target="_blank" >
+          <img src="images/html_validation_button_old.gif" alt="html validation">
           <p>- HTML Validation -</p>
         </a>
 
         <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
-          <img class="cssImg" src="images/validation_button_css_rectangle_blue.gif" alt="css validation"/>
+          <img class="cssImg" src="images/validation_button_css_rectangle_blue.gif" alt="css validation">
           <p>- CSS Validation -</p>
          </a>
       </div>
