--- a/brand.html
+++ b/brand.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="palletteBox">
-      <div class="palletteText">Color Pallette</div>
+      <div class="palletteText">Color Palette</div>
       <div class="colorsBox">
         <div class="color1">
           <p>#03045E</p>
