--- a/contract.html
+++ b/contract.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giancarlo Kite's Gentle Koala ~ WEB115 ~ Course Contract</title> 
-    <link rel="stylesheet" href="styles/contract.css"/>
+    <link rel="stylesheet" href="styles/contract.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akatab&family=Diphylleia&display=swap" rel="stylesheet">
@@ -47,7 +47,7 @@
     <footer> 
 
       <div class="navBox">
-        <nav class="footerNav">
+        <ul class="footerNav">
           <li><a href="https://github.com/giancarlo-k" target="_blank">GitHub</a></li>
           <li><a href="https://giancarlo-k.github.io" target="_blank">GitHub.io</a></li>
           <li><a href="https://giancarlo-k.github.io/web115/index.html" target="_blank">WEB115.io</a></li>
@@ -56,7 +56,7 @@
           <li><a href="https://jsfiddle.net/user/giancarlo_k/fiddles/" target="_blank">JSFiddle</a></li>
           <li><a href="https://www.linkedin.com/in/giancarlo-kite-6844661b8/" target="_blank">LinkedIn</a></li>
           <li><a href="https://open.spotify.com/playlist/5KTnztfS1VXf9UqRhKTBQE?si=25c333bdf08a4d4c" target="_blank">My Playlist</a></li>
-        </nav>
+        </ul>
       </div>
 
       <div class="designedBy">
@@ -72,6 +72,4 @@
     </footer>
    
   </body>
-      </a>
-      </footer> 
-  </body>
+
