--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </div>
       
       <div class="footerButtons">
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb115%2Fcontract.html" target="_blank">- HTML Validation -</a>
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb115%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" target="_blank">- CSS Validation -</a>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb115%2Findex.html" target="_blank">- HTML Validation -</a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb115%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" target="_blank">- CSS Validation -</a>
       </div>
   
   
