--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +36,7 @@
     <footer> 
 
       <div class="navBox">
-        <nav class="footerNav">
+        <ul class="footerNav">
           <li><a href="https://github.com/giancarlo-k" target="_blank">GitHub</a></li>
           <li><a href="https://giancarlo-k.github.io" target="_blank">GitHub.io</a></li>
           <li><a href="https://giancarlo-k.github.io/web115/index.html" target="_blank">WEB115.io</a></li>
@@ -45,7 +45,7 @@
           <li><a href="https://jsfiddle.net/user/giancarlo_k/fiddles/" target="_blank">JSFiddle</a></li>
           <li><a href="https://www.linkedin.com/in/giancarlo-kite-6844661b8/" target="_blank">LinkedIn</a></li>
           <li><a href="https://open.spotify.com/playlist/5KTnztfS1VXf9UqRhKTBQE?si=25c333bdf08a4d4c" target="_blank">My Playlist</a></li>
-        </nav>
+        </ul>
       </div>
   
       <div class="designedBy">
@@ -61,5 +61,4 @@
     </footer>
 
   </body>
-
   
