--- a/introduction.html
+++ b/introduction.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giancarlo Kite ~ WEB115 ~ M1 Introduction</title> 
+    <title>Giancarlo Kite's Gentle Koala ~ WEB115 ~ Introduction</title> 
     <link rel="stylesheet" href="styles/introduction.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
