--- a/introduction.html
+++ b/introduction.html
@@ -23,6 +23,9 @@
     </header>
 
     <main>
+
+      <h2>Introduction</h2>
+      
       <div class="understandP">
         <i>"I understand that what is on this page is not password protected and I will not put anything here that I don't want publicly available."</i>
         <i>- GK 08/16/2023</i>
