--- a/brand.html
+++ b/brand.html
@@ -108,7 +108,7 @@
       </div>
       
       <div class="footerButtons">
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb115%2Fintroduction.html" target="_blank">- HTML Validation -</a>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb115%2Fbrand.html" target="_blank">- HTML Validation -</a>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb115%2Fbrand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" target="_blank">- CSS Validation -</a>
       </div>
   
