--- a/toc.html
+++ b/toc.html
@@ -21,10 +21,10 @@
       <h2>Table of Contents</h2>
     
       <div class="contentsBox">
-        <a href="https://giancarlo-k.github.io/web115/contract.html">Course Contract</a>
-        <a href="https://giancarlo-k.github.io/web115/introduction.html">Introduction</a>
-        <a href="https://giancarlo-k.github.io/web115/brand.html">Brand Board</a>
-        <a href="https://www.codecademy.com/profiles/giancarlo_k">Codeacademy</a>
+        <a href="https://giancarlo-k.github.io/web115/contract.html" target="_blank">Course Contract</a>
+        <a href="https://giancarlo-k.github.io/web115/introduction.html" target="_blank">Introduction</a>
+        <a href="https://giancarlo-k.github.io/web115/brand.html" target="_blank">Brand Board</a>
+        <a href="https://www.codecademy.com/profiles/giancarlo_k" target="_blank">Codeacademy</a>
       </div>
 
       <div class="line"></div>
