--- a/introduction.html
+++ b/introduction.html
@@ -14,10 +14,10 @@
       <h1>Giancarlo A. Kite's Gentle Koala | WEB115</h1>
       <nav>
         <ul>
-          <li><a href="https://giancarlo-k.github.io/web115/index.html" target="_blank">Home</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/introduction.html" target="_blank">Introduction</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/contract.html" target="_blank">Contract</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/brand.html" target="_blank">Brand Board</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/index.html">Home</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/introduction.html">Introduction</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/contract.html">Contract</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/brand.html">Brand</a></li>
         </ul>
       </nav>
     </header>
@@ -26,10 +26,7 @@
 
       <h2>Introduction</h2>
 
-      <div class="understandP">
-        <i>"I understand that what is on this page is not password protected and I will not put anything here that I don't want publicly available."</i>
-        <i>- GK 08/16/2023</i>
-      </div>
+
   
       <div class="imageBox">
         <img class="image" src="images/gcandhisguitar.png" alt="gcandhisguitar">
@@ -49,7 +46,7 @@
     
           <ul>
             <li><b>DBA-120 - Database Programming I</b>: Degree Req. + Will teach me all about data retrieval, data manipulation, etc.</li>
-            <li><b>WEB-115 - Web Markup & Scripting</b>: Degree Req. + Will help strengthen my front-end programming skills</li>
+            <li><b><a class="classLink" href="https://giancarlo-k.github.io/web115/contract.html">WEB-115 - Web Markup & Scripting</a></b>: Degree Req. + Will help strengthen my front-end programming skills</li>
             <li><b>CSC-154 - Software Development</b>: Degree Req. + Covers all scopes of software development</li>
             <li><b>CSC-121 - Python Programming</b>: Degree Req. + Might become my main language</li>
             <li><b>CTS-240 - Project Management</b>: Degree Req.</li>
