--- a/contract.html
+++ b/contract.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giancarlo Kite's Gentle Koala ~ WEB115 ~ Course Contract</title> 
-    <link rel="stylesheet" href="styles/contract.css">
+    <link rel="stylesheet" href="styles/contract.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akatab&family=Diphylleia&display=swap" rel="stylesheet">
@@ -14,10 +14,10 @@
       <h1>Giancarlo A. Kite's Gentle Koala | WEB115</h1>
       <nav>
         <ul>
-          <li><a href="https://giancarlo-k.github.io/web115/index.html" target="_blank">Home</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/introduction.html" target="_blank">Introduction</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/contract.html" target="_blank">Contract</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/brand.html" target="_blank">Brand Board</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/index.html">Home</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/introduction.html">Introduction</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/contract.html">Contract</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/brand.html">Brand</a></li>
         </ul>
       </nav>
     </header>
