--- a/brand.html
+++ b/brand.html
@@ -22,10 +22,10 @@
       <h1>Giancarlo A. Kite's Gentle Koala | WEB115</h1>
       <nav>
         <ul>
-          <li><a href="https://giancarlo-k.github.io/web115/index.html" target="_blank">Home</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/introduction.html" target="_blank">Introduction</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/contract.html" target="_blank">Contract</a></li>
-          <li><a href="https://giancarlo-k.github.io/web115/brand.html" target="_blank">Brand Board</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/index.html">Home</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/introduction.html">Introduction</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/contract.html">Contract</a></li>
+          <li><a href="https://giancarlo-k.github.io/web115/brand.html">Brand</a></li>
         </ul>
       </nav>
     </header>
